tests/spec/parse/snapshots/impl_mixed_visibility_methods.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Counter {
    value: int,
  }
  
  impl Counter {
    fn private_helper(self: Counter) -> int {
      return self.value * 2;
    }
  
    pub fn get(self: Counter) -> int {
      return self.private_helper();
    }
  
    pub fn set(self: Counter, new_value: int) -> Counter {
      return Counter { value: new_value };
    }
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Counter",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 7,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "value",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 20,
                        byte_length: 5,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 27,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 32,
        },
    },
    ImplBlock {
        annotation: Constructor {
            name: "Counter",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 40,
                byte_length: 7,
            },
        },
        receiver_name: "Counter",
        methods: [
            Function {
                doc: None,
                attributes: [],
                name: "private_helper",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 55,
                    byte_length: 14,
                },
                generics: [],
                params: [
                    Binding {
                        pattern: Identifier {
                            identifier: "self",
                            span: Span {
                                file_id: 0,
                                byte_offset: 70,
                                byte_length: 4,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "Counter",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 76,
                                    byte_length: 7,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                ],
                return_annotation: Constructor {
                    name: "int",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 88,
                        byte_length: 3,
                    },
                },
                return_type: Var {
                    id: uninferred,
                },
                visibility: Private,
                body: Definition(
                    Block {
                        items: [
                            Return {
                                expression: Binary {
                                    operator: Multiplication,
                                    left: DotAccess {
                                        expression: Identifier {
                                            value: "self",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 105,
                                                byte_length: 4,
                                            },
                                            resolution: Unresolved,
                                        },
                                        member: "value",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 105,
                                            byte_length: 10,
                                        },
                                        resolution: Unresolved,
                                    },
                                    right: Literal {
                                        literal: Integer {
                                            value: 2,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 118,
                                            byte_length: 1,
                                        },
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 105,
                                        byte_length: 14,
                                    },
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 98,
                                    byte_length: 21,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 92,
                            byte_length: 32,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 52,
                    byte_length: 72,
                },
            },
            Function {
                doc: None,
                attributes: [],
                name: "get",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 135,
                    byte_length: 3,
                },
                generics: [],
                params: [
                    Binding {
                        pattern: Identifier {
                            identifier: "self",
                            span: Span {
                                file_id: 0,
                                byte_offset: 139,
                                byte_length: 4,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "Counter",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 145,
                                    byte_length: 7,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                ],
                return_annotation: Constructor {
                    name: "int",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 157,
                        byte_length: 3,
                    },
                },
                return_type: Var {
                    id: uninferred,
                },
                visibility: Public,
                body: Definition(
                    Block {
                        items: [
                            Return {
                                expression: Call {
                                    expression: DotAccess {
                                        expression: Identifier {
                                            value: "self",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 174,
                                                byte_length: 4,
                                            },
                                            resolution: Unresolved,
                                        },
                                        member: "private_helper",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 174,
                                            byte_length: 19,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 174,
                                        byte_length: 21,
                                    },
                                    call_kind: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 167,
                                    byte_length: 28,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 161,
                            byte_length: 39,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 132,
                    byte_length: 68,
                },
            },
            Function {
                doc: None,
                attributes: [],
                name: "set",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 211,
                    byte_length: 3,
                },
                generics: [],
                params: [
                    Binding {
                        pattern: Identifier {
                            identifier: "self",
                            span: Span {
                                file_id: 0,
                                byte_offset: 215,
                                byte_length: 4,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "Counter",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 221,
                                    byte_length: 7,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                    Binding {
                        pattern: Identifier {
                            identifier: "new_value",
                            span: Span {
                                file_id: 0,
                                byte_offset: 230,
                                byte_length: 9,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 241,
                                    byte_length: 3,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                ],
                return_annotation: Constructor {
                    name: "Counter",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 249,
                        byte_length: 7,
                    },
                },
                return_type: Var {
                    id: uninferred,
                },
                visibility: Public,
                body: Definition(
                    Block {
                        items: [
                            Return {
                                expression: StructCall {
                                    name: "Counter",
                                    field_assignments: [
                                        StructFieldAssignment {
                                            name: "value",
                                            name_span: Span {
                                                file_id: 0,
                                                byte_offset: 280,
                                                byte_length: 5,
                                            },
                                            value: Identifier {
                                                value: "new_value",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 287,
                                                    byte_length: 9,
                                                },
                                                resolution: Unresolved,
                                            },
                                        },
                                    ],
                                    spread: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 270,
                                        byte_length: 28,
                                    },
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 263,
                                    byte_length: 35,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 257,
                            byte_length: 46,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 208,
                    byte_length: 95,
                },
            },
        ],
        generics: [],
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 35,
            byte_length: 270,
        },
    },
]
